# machining_positions

./: .gitignore  .python-version  Essai 1.xlsx  LettreC 2-Défonçage D1_6.nc  essai-1.ipynb  essai-3.ipynb  essai-4.ipynb  lecture-svg.ipynb  main.py  pyproject.toml  requirements.txt  test.csv
machining_positions/: compute.py  gui.py  load.py  output.py  process.py
tes_output_6/: machining_positions_0.gecode  machining_positions_1.gecode  machining_positions_10.gecode  machining_positions_11.gecode  machining_positions_12.gecode  machining_positions_13.gecode  machining_positions_14.gecode  machining_positions_15.gecode  machining_positions_16.gecode  machining_positions_17.gecode  machining_positions_18.gecode  machining_positions_19.gecode  machining_positions_2.gecode  machining_positions_20.gecode  machining_positions_21.gecode  machining_positions_22.gecode  machining_positions_23.gecode  machining_positions_24.gecode  machining_positions_25.gecode  machining_positions_26.gecode  machining_positions_27.gecode  machining_positions_28.gecode  machining_positions_29.gecode  machining_positions_3.gecode  machining_positions_30.gecode  machining_positions_31.gecode  machining_positions_32.gecode  machining_positions_33.gecode  machining_positions_34.gecode  machining_positions_35.gecode  machining_positions_36.gecode  machining_positions_37.gecode  machining_positions_38.gecode  machining_positions_39.gecode  machining_positions_4.gecode  machining_positions_40.gecode  machining_positions_41.gecode  machining_positions_42.gecode  machining_positions_43.gecode  (+5 more)
(+90 files in other folders)
